Fix truffle config to new infura version

--- a/testnet-contracts/.env.example
+++ b/testnet-contracts/.env.example
@@ -1,6 +1,6 @@
 # Replace example MNEMONIC with your MetaMask mnemonic
 MNEMONIC="words unique to your metamask account which are used to authenticate the owner"
 # Replace example INFURA_PROJECT_ID with your Infura project's ID
-INFURA_PROJECT_ID="JFSH7439sjsdtqTM23Dz" 
+INFURA_PROJECT_ID=JFSH7439sjsdtqTM23Dz
 LOCAL_PROVIDER="http://localhost:7545"
 
